# xCrash

./: settings.gradle
xcrash_lib_xxx/: build.gradle
xcrash_lib_xxx/src/androidTest/java/xcrash/lib/xxx/: ExampleInstrumentedTest.java
xcrash_lib_xxx/src/main/: AndroidManifest.xml
xcrash_lib_xxx/src/main/cpp/: CMakeLists.txt
xcrash_lib_xxx/src/main/cpp/xcrash/: xc_jni.c  xc_jni.h
xcrash_lib_xxx/src/main/java/lib/base/xcrash/: DefaultLogger.java  Errno.java  ICrashCallback.java  ILibLoader.java  ILogger.java  NativeHandler.java  Util.java  XCrash.java
xcrash_lib_xxx/src/test/java/xcrash/lib/xxx/: ExampleUnitTest.java
xcrash_sample/: build.gradle
xcrash_sample/src/main/java/xcrash/sample/: MyCustomApplication.java
